# SCToolbox

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/sctoolbox/ode_module/: solving_algorithms.py
src/sctoolbox/statistics_module/: __init__.py  statistical_operations.py
tests/: test_solving_algorithms.py  test_statistical_operations.py
