[metadata]
name = sctoolbox
description = An implementation of a Scientific Computing Toolbox made with Python and C++
author = Denis Cristian Pal
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages =
    sctoolbox
# install_requires =
#     numpy>=2
#     scipy>=1.15.1
#     matplotlib>=3.10.0
#     seaborn>=0.13.2
#     pandas>=2.2.3
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
sctoolbox = py.typed

[flake8]
max-line-length = 160